ajout composant ami, affichage des amis

--- a/app/src/app/pangolin/pangolin.component.html
+++ b/app/src/app/pangolin/pangolin.component.html
@@ -1,3 +1,5 @@
 <p>pangolin works!</p>
 <p>nom: {{ nom }}</p>
 <p>role: {{ role }}</p>
+<app-role></app-role>
+<app-amis [friendList]="amis"></app-amis>
