--- a/app/src/app/ami/ami.component.html
+++ b/app/src/app/ami/ami.component.html
@@ -1,9 +1,15 @@
 <div class="content-item">
-  {{ id }}
-  <form (ngSubmit)="onSubmit()">
-    <p>{{ nom }}</p>
-    <p>{{ role }}</p>
-    <button type="submit">Ajouter en Ami</button>
-    <!--ajouter en ami-->
-  </form>
+  <li>
+    {{ idFriend }}
+    {{ id }}
+    <p>
+      <!-- {{ id }} -->
+    </p>
+    <form (ngSubmit)="onSubmit()">
+      <p>{{ nom }}</p>
+      <p>{{ role }}</p>
+      <button type="submit">Enlever de ses amis</button>
+      <!--ajouter en ami-->
+    </form>
+  </li>
 </div>
